[package]
name = "myde-wrap"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { version = "0.3", features = ["backend_winit", "renderer_gl", "wayland_frontend"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
